# modelsmatter_modelzoo

./: .gitmodules  README.md  pyproject.toml  ssbenchmark.yaml
ssbenchmark/: main.py  model_zoo.py  utils.py
ssbenchmark/process/: data_processing.py  process_arguments.py
ssbenchmark/ssmodels/: __init__.py  base_model.py  model_aizynthfinder.py  model_augmented_transformer.py  model_chemformer.py  model_example.py  model_localretro.py  model_mhn_react.py  model_mhn_react_nocache.py  model_moleculartransformer.py
